--- a/src/utilities/linear_algebra/.deps/dense_vector.Po
+++ b/src/utilities/linear_algebra/.deps/dense_vector.Po
@@ -120,23 +120,7 @@ utilities/linear_algebra/dense_vector.o: \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/adxintrin.h \
  /usr/include/c++/4.8/bits/random.tcc /usr/include/c++/4.8/numeric \
  /usr/include/c++/4.8/bits/stl_numeric.h \
- utilities/linear_algebra/blas.hpp \
- utilities/linear_algebra/../general/debug.hpp \
- /usr/include/c++/4.8/iostream /usr/include/c++/4.8/ostream \
- /usr/include/c++/4.8/ios /usr/include/c++/4.8/bits/ios_base.h \
- /usr/include/c++/4.8/bits/locale_classes.h \
- /usr/include/c++/4.8/bits/locale_classes.tcc \
- /usr/include/c++/4.8/streambuf /usr/include/c++/4.8/bits/streambuf.tcc \
- /usr/include/c++/4.8/bits/basic_ios.h \
- /usr/include/c++/4.8/bits/locale_facets.h /usr/include/c++/4.8/cwctype \
- /usr/include/wctype.h \
- /usr/include/x86_64-linux-gnu/c++/4.8/bits/ctype_base.h \
- /usr/include/c++/4.8/bits/streambuf_iterator.h \
- /usr/include/x86_64-linux-gnu/c++/4.8/bits/ctype_inline.h \
- /usr/include/c++/4.8/bits/locale_facets.tcc \
- /usr/include/c++/4.8/bits/basic_ios.tcc \
- /usr/include/c++/4.8/bits/ostream.tcc /usr/include/c++/4.8/istream \
- /usr/include/c++/4.8/bits/istream.tcc /usr/include/c++/4.8/bitset
+ utilities/linear_algebra/blas.hpp
 
 /usr/include/stdc-predef.h:
 
@@ -437,47 +421,3 @@ utilities/linear_algebra/../general/dvec_def.hpp:
 /usr/include/c++/4.8/bits/stl_numeric.h:
 
 utilities/linear_algebra/blas.hpp:
-
-utilities/linear_algebra/../general/debug.hpp:
-
-/usr/include/c++/4.8/iostream:
-
-/usr/include/c++/4.8/ostream:
-
-/usr/include/c++/4.8/ios:
-
-/usr/include/c++/4.8/bits/ios_base.h:
-
-/usr/include/c++/4.8/bits/locale_classes.h:
-
-/usr/include/c++/4.8/bits/locale_classes.tcc:
-
-/usr/include/c++/4.8/streambuf:
-
-/usr/include/c++/4.8/bits/streambuf.tcc:
-
-/usr/include/c++/4.8/bits/basic_ios.h:
-
-/usr/include/c++/4.8/bits/locale_facets.h:
-
-/usr/include/c++/4.8/cwctype:
-
-/usr/include/wctype.h:
-
-/usr/include/x86_64-linux-gnu/c++/4.8/bits/ctype_base.h:
-
-/usr/include/c++/4.8/bits/streambuf_iterator.h:
-
-/usr/include/x86_64-linux-gnu/c++/4.8/bits/ctype_inline.h:
-
-/usr/include/c++/4.8/bits/locale_facets.tcc:
-
-/usr/include/c++/4.8/bits/basic_ios.tcc:
-
-/usr/include/c++/4.8/bits/ostream.tcc:
-
-/usr/include/c++/4.8/istream:
-
-/usr/include/c++/4.8/bits/istream.tcc:
-
-/usr/include/c++/4.8/bitset:
