--- a/src/utilities/optimization/.deps/lbfgs.Po
+++ b/src/utilities/optimization/.deps/lbfgs.Po
@@ -1,5 +1,6 @@
-test/bfgs_test.o: test/bfgs_test.cpp /usr/include/stdc-predef.h \
- test/../utilities/optimization/bfgs.hpp /usr/include/c++/4.8/functional \
+utilities/optimization/lbfgs.o: utilities/optimization/lbfgs.cpp \
+ /usr/include/stdc-predef.h utilities/optimization/lbfgs.hpp \
+ /usr/include/c++/4.8/functional \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++config.h \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/os_defines.h \
  /usr/include/features.h /usr/include/x86_64-linux-gnu/sys/cdefs.h \
@@ -107,7 +108,9 @@ test/bfgs_test.o: test/bfgs_test.cpp /usr/include/stdc-predef.h \
  /usr/include/c++/4.8/bits/basic_ios.tcc \
  /usr/include/c++/4.8/bits/ostream.tcc /usr/include/c++/4.8/istream \
  /usr/include/c++/4.8/bits/istream.tcc \
- test/../utilities/optimization/../general/dvec_def.hpp \
+ utilities/optimization/../data_structures/fixed_size_queue.hpp \
+ utilities/optimization/../data_structures/../linear_algebra/dense_vector.hpp \
+ utilities/optimization/../data_structures/../linear_algebra/../general/dvec_def.hpp \
  /usr/include/c++/4.8/vector /usr/include/c++/4.8/bits/stl_construct.h \
  /usr/include/c++/4.8/ext/alloc_traits.h \
  /usr/include/c++/4.8/bits/alloc_traits.h \
@@ -115,12 +118,9 @@ test/bfgs_test.o: test/bfgs_test.cpp /usr/include/stdc-predef.h \
  /usr/include/c++/4.8/bits/stl_uninitialized.h \
  /usr/include/c++/4.8/bits/stl_vector.h \
  /usr/include/c++/4.8/bits/stl_bvector.h \
- /usr/include/c++/4.8/bits/vector.tcc \
- test/../utilities/optimization/../linear_algebra/dense_matrix.hpp \
- test/../utilities/optimization/../linear_algebra/../general/dvec_def.hpp \
- test/../utilities/optimization/../linear_algebra/dense_vector.hpp \
- /usr/include/c++/4.8/random /usr/include/c++/4.8/cmath \
- /usr/include/math.h /usr/include/x86_64-linux-gnu/bits/huge_val.h \
+ /usr/include/c++/4.8/bits/vector.tcc /usr/include/c++/4.8/random \
+ /usr/include/c++/4.8/cmath /usr/include/math.h \
+ /usr/include/x86_64-linux-gnu/bits/huge_val.h \
  /usr/include/x86_64-linux-gnu/bits/huge_valf.h \
  /usr/include/x86_64-linux-gnu/bits/huge_vall.h \
  /usr/include/x86_64-linux-gnu/bits/inf.h \
@@ -141,17 +141,18 @@ test/bfgs_test.o: test/bfgs_test.cpp /usr/include/stdc-predef.h \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/adxintrin.h \
  /usr/include/c++/4.8/bits/random.tcc /usr/include/c++/4.8/numeric \
  /usr/include/c++/4.8/bits/stl_numeric.h \
- test/../utilities/optimization/../linear_algebra/blas.hpp \
- test/../utilities/optimization/../linear_algebra/dense_vector.hpp \
- test/../utilities/optimization/line_search.hpp \
- test/../utilities/optimization/lbfgs.hpp \
- test/../utilities/optimization/../data_structures/fixed_size_queue.hpp \
- test/../utilities/optimization/../data_structures/../linear_algebra/dense_vector.hpp \
- test/../utilities/general/dvec_def.hpp
+ utilities/optimization/../data_structures/../linear_algebra/blas.hpp \
+ utilities/optimization/../general/dvec_def.hpp \
+ utilities/optimization/../linear_algebra/dense_vector.hpp \
+ utilities/optimization/line_search.hpp \
+ utilities/optimization/../linear_algebra/dense_matrix.hpp \
+ utilities/optimization/../linear_algebra/../general/dvec_def.hpp \
+ utilities/optimization/../linear_algebra/dense_vector.hpp \
+ utilities/optimization/../linear_algebra/blas.hpp
 
 /usr/include/stdc-predef.h:
 
-test/../utilities/optimization/bfgs.hpp:
+utilities/optimization/lbfgs.hpp:
 
 /usr/include/c++/4.8/functional:
 
@@ -431,7 +432,11 @@ test/../utilities/optimization/bfgs.hpp:
 
 /usr/include/c++/4.8/bits/istream.tcc:
 
-test/../utilities/optimization/../general/dvec_def.hpp:
+utilities/optimization/../data_structures/fixed_size_queue.hpp:
+
+utilities/optimization/../data_structures/../linear_algebra/dense_vector.hpp:
+
+utilities/optimization/../data_structures/../linear_algebra/../general/dvec_def.hpp:
 
 /usr/include/c++/4.8/vector:
 
@@ -450,12 +455,6 @@ test/../utilities/optimization/../general/dvec_def.hpp:
 /usr/include/c++/4.8/bits/stl_bvector.h:
 
 /usr/include/c++/4.8/bits/vector.tcc:
-
-test/../utilities/optimization/../linear_algebra/dense_matrix.hpp:
-
-test/../utilities/optimization/../linear_algebra/../general/dvec_def.hpp:
-
-test/../utilities/optimization/../linear_algebra/dense_vector.hpp:
 
 /usr/include/c++/4.8/random:
 
@@ -509,16 +508,18 @@ test/../utilities/optimization/../linear_algebra/dense_vector.hpp:
 
 /usr/include/c++/4.8/bits/stl_numeric.h:
 
-test/../utilities/optimization/../linear_algebra/blas.hpp:
+utilities/optimization/../data_structures/../linear_algebra/blas.hpp:
 
-test/../utilities/optimization/../linear_algebra/dense_vector.hpp:
+utilities/optimization/../general/dvec_def.hpp:
 
-test/../utilities/optimization/line_search.hpp:
+utilities/optimization/../linear_algebra/dense_vector.hpp:
 
-test/../utilities/optimization/lbfgs.hpp:
+utilities/optimization/line_search.hpp:
 
-test/../utilities/optimization/../data_structures/fixed_size_queue.hpp:
+utilities/optimization/../linear_algebra/dense_matrix.hpp:
 
-test/../utilities/optimization/../data_structures/../linear_algebra/dense_vector.hpp:
+utilities/optimization/../linear_algebra/../general/dvec_def.hpp:
 
-test/../utilities/general/dvec_def.hpp:
+utilities/optimization/../linear_algebra/dense_vector.hpp:
+
+utilities/optimization/../linear_algebra/blas.hpp:
