--- a/src/test/.deps/line_search_test.Po
+++ b/src/test/.deps/line_search_test.Po
@@ -1,6 +1,7 @@
-utilities/optimization/line_search.o: \
- utilities/optimization/line_search.cpp /usr/include/stdc-predef.h \
- utilities/optimization/line_search.hpp /usr/include/c++/4.8/functional \
+test/line_search_test.o: test/line_search_test.cpp \
+ /usr/include/stdc-predef.h \
+ test/../utilities/optimization/line_search.hpp \
+ /usr/include/c++/4.8/functional \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++config.h \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/os_defines.h \
  /usr/include/features.h /usr/include/x86_64-linux-gnu/sys/cdefs.h \
@@ -93,8 +94,8 @@ utilities/optimization/line_search.o: \
  /usr/include/c++/4.8/bits/functional_hash.h \
  /usr/include/c++/4.8/bits/basic_string.tcc \
  /usr/include/c++/4.8/bits/uses_allocator.h \
- utilities/optimization/../linear_algebra/dense_matrix.hpp \
- utilities/optimization/../linear_algebra/../general/dvec_def.hpp \
+ test/../utilities/optimization/../linear_algebra/dense_matrix.hpp \
+ test/../utilities/optimization/../linear_algebra/../general/dvec_def.hpp \
  /usr/include/c++/4.8/vector /usr/include/c++/4.8/bits/stl_construct.h \
  /usr/include/c++/4.8/ext/alloc_traits.h \
  /usr/include/c++/4.8/bits/alloc_traits.h \
@@ -103,7 +104,7 @@ utilities/optimization/line_search.o: \
  /usr/include/c++/4.8/bits/stl_vector.h \
  /usr/include/c++/4.8/bits/stl_bvector.h \
  /usr/include/c++/4.8/bits/vector.tcc \
- utilities/optimization/../linear_algebra/dense_vector.hpp \
+ test/../utilities/optimization/../linear_algebra/dense_vector.hpp \
  /usr/include/c++/4.8/random /usr/include/c++/4.8/cmath \
  /usr/include/math.h /usr/include/x86_64-linux-gnu/bits/huge_val.h \
  /usr/include/x86_64-linux-gnu/bits/huge_valf.h \
@@ -126,9 +127,9 @@ utilities/optimization/line_search.o: \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/adxintrin.h \
  /usr/include/c++/4.8/bits/random.tcc /usr/include/c++/4.8/numeric \
  /usr/include/c++/4.8/bits/stl_numeric.h \
- utilities/optimization/../linear_algebra/blas.hpp \
- utilities/optimization/../linear_algebra/dense_vector.hpp \
- utilities/optimization/../general/dvec_def.hpp \
+ test/../utilities/optimization/../linear_algebra/blas.hpp \
+ test/../utilities/optimization/../linear_algebra/dense_vector.hpp \
+ test/../utilities/optimization/../general/dvec_def.hpp \
  /usr/include/c++/4.8/iostream /usr/include/c++/4.8/ostream \
  /usr/include/c++/4.8/ios /usr/include/c++/4.8/bits/ios_base.h \
  /usr/include/c++/4.8/bits/locale_classes.h \
@@ -147,7 +148,7 @@ utilities/optimization/line_search.o: \
 
 /usr/include/stdc-predef.h:
 
-utilities/optimization/line_search.hpp:
+test/../utilities/optimization/line_search.hpp:
 
 /usr/include/c++/4.8/functional:
 
@@ -387,9 +388,9 @@ utilities/optimization/line_search.hpp:
 
 /usr/include/c++/4.8/bits/uses_allocator.h:
 
-utilities/optimization/../linear_algebra/dense_matrix.hpp:
+test/../utilities/optimization/../linear_algebra/dense_matrix.hpp:
 
-utilities/optimization/../linear_algebra/../general/dvec_def.hpp:
+test/../utilities/optimization/../linear_algebra/../general/dvec_def.hpp:
 
 /usr/include/c++/4.8/vector:
 
@@ -409,7 +410,7 @@ utilities/optimization/../linear_algebra/../general/dvec_def.hpp:
 
 /usr/include/c++/4.8/bits/vector.tcc:
 
-utilities/optimization/../linear_algebra/dense_vector.hpp:
+test/../utilities/optimization/../linear_algebra/dense_vector.hpp:
 
 /usr/include/c++/4.8/random:
 
@@ -463,11 +464,11 @@ utilities/optimization/../linear_algebra/dense_vector.hpp:
 
 /usr/include/c++/4.8/bits/stl_numeric.h:
 
-utilities/optimization/../linear_algebra/blas.hpp:
+test/../utilities/optimization/../linear_algebra/blas.hpp:
 
-utilities/optimization/../linear_algebra/dense_vector.hpp:
+test/../utilities/optimization/../linear_algebra/dense_vector.hpp:
 
-utilities/optimization/../general/dvec_def.hpp:
+test/../utilities/optimization/../general/dvec_def.hpp:
 
 /usr/include/c++/4.8/iostream:
 
