completed single layer unit test. Updates to other tests

--- a/src/test/checksingle_layer_perceptron.ipynb
+++ b/src/test/checksingle_layer_perceptron.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 164,
    "metadata": {
     "collapsed": false
    },
@@ -28,22 +28,30 @@
     "    return np.arange(N)/N+0.001*(genR(N))\n",
     "\n",
     "N = 20\n",
-    "Ntrain = 5\n",
-    "P = 2\n",
-    "features = np.row_stack([genF(N), genF(N)])\n",
+    "P = 3\n",
+    "features = np.row_stack([genF(N), genF(N), np.ones(N)])\n",
     "        ##genF(N), genF(N), genF(N),\n",
     "        ##                 genF(N), genF(N), genF(N), genF(N),\n",
     "        ##                 genF(N), genF(N), genF(N)])\n",
     "beta = 0.1*genR(P)\n",
-    "outputs = np.dot(beta, features)\n",
-    "\n",
-    "np.savetxt('test_features.dat', features, delimiter='\\n')\n",
+    "outputs = np.dot(beta, features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.savetxt('test_features.dat', features.T, delimiter='\\n')\n",
     "np.savetxt('test_outputs.dat', outputs, delimiter='\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 270,
    "metadata": {
     "collapsed": false
    },
@@ -51,32 +59,36 @@
     {
      "data": {
       "text/plain": [
-       "0.00056236463405122145"
+       "0.050579137890142574"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "N = 20\n",
+    "Ntrain = 5\n",
+    "P = 2\n",
     "hidden_layer_sizes = (10,)\n",
     "activation = 'logistic'\n",
     "solver = 'lbfgs'\n",
     "alpha = 0.0\n",
+    "features_ = features[:P]\n",
     "\n",
     "slp = ann.MLPRegressor(hidden_layer_sizes, activation,\n",
     "                       solver, alpha)\n",
     "\n",
-    "slp.fit(features.T[:Ntrain], outputs[:Ntrain])\n",
+    "slp.fit(features_.T[:Ntrain], outputs[:Ntrain])\n",
     "\n",
-    "predictions = slp.predict(features.T)\n",
+    "predictions = slp.predict(features_.T)\n",
     "np.sum((predictions-outputs)**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 190,
    "metadata": {
     "collapsed": false
    },
@@ -84,59 +96,13 @@
     {
      "data": {
       "text/plain": [
-       "[array([[ 0.36475506,  0.32936209, -0.30034401, -0.03837287, -0.11228597,\n",
-       "         -0.10590716,  0.32378843,  0.1388795 , -0.35671973,  0.3729059 ],\n",
-       "        [ 0.23994701,  0.27131302, -0.27721972,  0.02964724,  0.21391469,\n",
-       "          0.27491315, -0.19445452, -0.3580211 ,  0.07872436, -0.25239263]]),\n",
-       " array([[-0.23043272],\n",
-       "        [-0.13940985],\n",
-       "        [ 0.01150595],\n",
-       "        [-0.04549845],\n",
-       "        [-0.01995571],\n",
-       "        [ 0.38977472],\n",
-       "        [ 0.02864498],\n",
-       "        [-0.11320513],\n",
-       "        [ 0.02406866],\n",
-       "        [ 0.0843454 ]])]"
+       "array([-0.03698356, -0.03343392, -0.02998364, -0.02635184, -0.02286483,\n",
+       "       -0.01935199, -0.01580775, -0.01221157, -0.0086835 , -0.00526174,\n",
+       "       -0.00173164,  0.00182495,  0.00536214,  0.00892756,  0.01242477,\n",
+       "        0.0159338 ,  0.01938308,  0.02283704,  0.02630612,  0.02980281])"
       ]
      },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "slp.coefs_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "np.savetxt('test_starting.dat', np.concatenate([slp.coefs_[0].T.flatten(), slp.coefs_[1].flatten()]), delimiter='\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.00097028, -0.00267174, -0.0043213 , -0.00602068, -0.00765573,\n",
-       "       -0.00936173, -0.01104359, -0.01264567, -0.01425797, -0.01587452,\n",
-       "       -0.01752104, -0.01907509, -0.02066809, -0.02224507, -0.02378155,\n",
-       "       -0.02532156, -0.02677793, -0.02828535, -0.02973809, -0.03117436])"
-      ]
-     },
-     "execution_count": 45,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,89 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 271,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ -6.02201880e-07,  -2.18857264e-03,  -4.31341625e-03,\n",
-       "        -6.51196450e-03,  -8.62829255e-03,  -1.08567235e-02,\n",
-       "        -1.30726768e-02,  -1.51793155e-02,  -1.73220102e-02,\n",
-       "        -1.94815699e-02,  -2.17117739e-02,  -2.38255979e-02,\n",
-       "        -2.60214815e-02,  -2.82167098e-02,  -3.03832150e-02,\n",
-       "        -3.25772855e-02,  -3.46810001e-02,  -3.68906133e-02,\n",
-       "        -3.90508216e-02,  -4.12202709e-02])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "outputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([[ 0.36475506,  0.32936209, -0.30034401, -0.03837287, -0.11228597,\n",
-       "         -0.10590716,  0.32378843,  0.1388795 , -0.35671973,  0.3729059 ],\n",
-       "        [ 0.23994701,  0.27131302, -0.27721972,  0.02964724,  0.21391469,\n",
-       "          0.27491315, -0.19445452, -0.3580211 ,  0.07872436, -0.25239263]]),\n",
-       " array([[-0.23043272],\n",
-       "        [-0.13940985],\n",
-       "        [ 0.01150595],\n",
-       "        [-0.04549845],\n",
-       "        [-0.01995571],\n",
-       "        [ 0.38977472],\n",
-       "        [ 0.02864498],\n",
-       "        [-0.11320513],\n",
-       "        [ 0.02406866],\n",
-       "        [ 0.0843454 ]])]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "slp.coefs_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([ 0.08038026,  0.02153182,  0.08616298,  0.10521527,  0.21466815,\n",
-       "        -0.29889485,  0.37190552, -0.24228942,  0.09181965,  0.06372645]),\n",
-       " array([ 0.02906137])]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "slp.intercepts_"
+    "np.savetxt('test_starting.dat', np.concatenate([np.concatenate([slp.coefs_[0].flatten(), slp.intercepts_[0]]).reshape(P+1, hidden_layer_sizes[0]).flatten(),  \n",
+    "                                                slp.coefs_[1].flatten(), slp.intercepts_[1]]), delimiter='\\n')"
    ]
   },
   {
@@ -247,50 +138,6 @@
     "ax.scatter(features[0], features[1], outputs)\n",
     "ax.scatter(features[0], features[1], predictions, color='red')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.00343272235"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.5*(-2.24903e-05+0.000649785+0.00139293+0.0020491+0.00279612)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.003119075"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.5*(0.00139293+0.0020491+0.00279612)"
    ]
   },
   {
