--- a/src/test/.deps/single_layer_perceptron_test.Po
+++ b/src/test/.deps/single_layer_perceptron_test.Po
@@ -116,13 +116,16 @@ test/single_layer_perceptron_test.o: \
  /usr/include/x86_64-linux-gnu/bits/nan.h \
  /usr/include/x86_64-linux-gnu/bits/mathdef.h \
  /usr/include/x86_64-linux-gnu/bits/mathcalls.h \
- /usr/include/x86_64-linux-gnu/bits/mathinline.h \
+ /usr/include/x86_64-linux-gnu/bits/mathinline.h /usr/include/c++/4.8/map \
+ /usr/include/c++/4.8/bits/stl_tree.h \
+ /usr/include/c++/4.8/bits/alloc_traits.h \
+ /usr/include/c++/4.8/bits/ptr_traits.h \
+ /usr/include/c++/4.8/bits/stl_map.h \
+ /usr/include/c++/4.8/bits/stl_multimap.h \
  test/../neural_network/loss_function_data.hpp \
  test/../neural_network/../utilities/general/dvec_def.hpp \
  /usr/include/c++/4.8/vector /usr/include/c++/4.8/bits/stl_construct.h \
  /usr/include/c++/4.8/ext/alloc_traits.h \
- /usr/include/c++/4.8/bits/alloc_traits.h \
- /usr/include/c++/4.8/bits/ptr_traits.h \
  /usr/include/c++/4.8/bits/stl_uninitialized.h \
  /usr/include/c++/4.8/bits/stl_vector.h \
  /usr/include/c++/4.8/bits/stl_bvector.h \
@@ -476,6 +479,18 @@ test/../neural_network/network_functions.hpp:
 
 /usr/include/x86_64-linux-gnu/bits/mathinline.h:
 
+/usr/include/c++/4.8/map:
+
+/usr/include/c++/4.8/bits/stl_tree.h:
+
+/usr/include/c++/4.8/bits/alloc_traits.h:
+
+/usr/include/c++/4.8/bits/ptr_traits.h:
+
+/usr/include/c++/4.8/bits/stl_map.h:
+
+/usr/include/c++/4.8/bits/stl_multimap.h:
+
 test/../neural_network/loss_function_data.hpp:
 
 test/../neural_network/../utilities/general/dvec_def.hpp:
@@ -485,10 +500,6 @@ test/../neural_network/../utilities/general/dvec_def.hpp:
 /usr/include/c++/4.8/bits/stl_construct.h:
 
 /usr/include/c++/4.8/ext/alloc_traits.h:
-
-/usr/include/c++/4.8/bits/alloc_traits.h:
-
-/usr/include/c++/4.8/bits/ptr_traits.h:
 
 /usr/include/c++/4.8/bits/stl_uninitialized.h:
 
