completed hamiltonian term fitting program

--- a/src/test/.deps/linear_algebra_test.Po
+++ b/src/test/.deps/linear_algebra_test.Po
@@ -121,9 +121,7 @@ test/linear_algebra_test.o: test/linear_algebra_test.cpp \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/adxintrin.h \
  /usr/include/c++/4.8/bits/random.tcc /usr/include/c++/4.8/numeric \
  /usr/include/c++/4.8/bits/stl_numeric.h \
- test/../utilities/linear_algebra/blas.hpp \
- test/../utilities/linear_algebra/dense_vector.hpp \
- test/../utilities/general/debug.hpp /usr/include/c++/4.8/iostream \
+ test/../utilities/linear_algebra/blas.hpp /usr/include/c++/4.8/iostream \
  /usr/include/c++/4.8/ostream /usr/include/c++/4.8/ios \
  /usr/include/c++/4.8/bits/ios_base.h \
  /usr/include/c++/4.8/bits/locale_classes.h \
@@ -138,7 +136,9 @@ test/linear_algebra_test.o: test/linear_algebra_test.cpp \
  /usr/include/c++/4.8/bits/locale_facets.tcc \
  /usr/include/c++/4.8/bits/basic_ios.tcc \
  /usr/include/c++/4.8/bits/ostream.tcc /usr/include/c++/4.8/istream \
- /usr/include/c++/4.8/bits/istream.tcc /usr/include/c++/4.8/bitset
+ /usr/include/c++/4.8/bits/istream.tcc \
+ test/../utilities/linear_algebra/dense_vector.hpp \
+ test/../utilities/general/debug.hpp /usr/include/c++/4.8/bitset
 
 /usr/include/stdc-predef.h:
 
@@ -442,10 +442,6 @@ test/../utilities/linear_algebra/dense_vector.hpp:
 
 test/../utilities/linear_algebra/blas.hpp:
 
-test/../utilities/linear_algebra/dense_vector.hpp:
-
-test/../utilities/general/debug.hpp:
-
 /usr/include/c++/4.8/iostream:
 
 /usr/include/c++/4.8/ostream:
@@ -485,5 +481,9 @@ test/../utilities/general/debug.hpp:
 /usr/include/c++/4.8/istream:
 
 /usr/include/c++/4.8/bits/istream.tcc:
+
+test/../utilities/linear_algebra/dense_vector.hpp:
+
+test/../utilities/general/debug.hpp:
 
 /usr/include/c++/4.8/bitset:
