--- a/src/hamiltonians/.deps/site_labels.Po
+++ b/src/hamiltonians/.deps/site_labels.Po
@@ -1,7 +1,6 @@
-test/line_search_test.o: test/line_search_test.cpp \
- /usr/include/stdc-predef.h \
- test/../utilities/optimization/line_search.hpp \
- /usr/include/c++/4.8/functional \
+hamiltonians/site_labels.o: hamiltonians/site_labels.cpp \
+ /usr/include/stdc-predef.h hamiltonians/site_labels.hpp \
+ /usr/include/c++/4.8/unordered_map /usr/include/c++/4.8/utility \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++config.h \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/os_defines.h \
  /usr/include/features.h /usr/include/x86_64-linux-gnu/sys/cdefs.h \
@@ -9,21 +8,17 @@ test/line_search_test.o: test/line_search_test.cpp \
  /usr/include/x86_64-linux-gnu/gnu/stubs.h \
  /usr/include/x86_64-linux-gnu/gnu/stubs-64.h \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/cpu_defines.h \
- /usr/include/c++/4.8/bits/stl_function.h \
- /usr/include/c++/4.8/backward/binders.h /usr/include/c++/4.8/typeinfo \
- /usr/include/c++/4.8/exception \
- /usr/include/c++/4.8/bits/atomic_lockfree_defines.h \
- /usr/include/c++/4.8/bits/exception_ptr.h \
- /usr/include/c++/4.8/bits/exception_defines.h \
- /usr/include/c++/4.8/bits/nested_exception.h \
- /usr/include/c++/4.8/bits/hash_bytes.h /usr/include/c++/4.8/new \
- /usr/include/c++/4.8/tuple /usr/include/c++/4.8/utility \
  /usr/include/c++/4.8/bits/stl_relops.h \
  /usr/include/c++/4.8/bits/stl_pair.h /usr/include/c++/4.8/bits/move.h \
  /usr/include/c++/4.8/bits/concept_check.h \
  /usr/include/c++/4.8/type_traits /usr/include/c++/4.8/initializer_list \
- /usr/include/c++/4.8/array /usr/include/c++/4.8/stdexcept \
- /usr/include/c++/4.8/string /usr/include/c++/4.8/bits/stringfwd.h \
+ /usr/include/c++/4.8/tuple /usr/include/c++/4.8/array \
+ /usr/include/c++/4.8/stdexcept /usr/include/c++/4.8/exception \
+ /usr/include/c++/4.8/bits/atomic_lockfree_defines.h \
+ /usr/include/c++/4.8/bits/exception_ptr.h \
+ /usr/include/c++/4.8/bits/exception_defines.h \
+ /usr/include/c++/4.8/bits/nested_exception.h /usr/include/c++/4.8/string \
+ /usr/include/c++/4.8/bits/stringfwd.h \
  /usr/include/c++/4.8/bits/memoryfwd.h \
  /usr/include/c++/4.8/bits/char_traits.h \
  /usr/include/c++/4.8/bits/stl_algobase.h \
@@ -45,7 +40,7 @@ test/line_search_test.o: test/line_search_test.cpp \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdint.h /usr/include/stdint.h \
  /usr/include/c++/4.8/bits/allocator.h \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++allocator.h \
- /usr/include/c++/4.8/ext/new_allocator.h \
+ /usr/include/c++/4.8/ext/new_allocator.h /usr/include/c++/4.8/new \
  /usr/include/c++/4.8/bits/localefwd.h \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++locale.h \
  /usr/include/c++/4.8/clocale /usr/include/locale.h \
@@ -58,6 +53,8 @@ test/line_search_test.o: test/line_search_test.cpp \
  /usr/include/x86_64-linux-gnu/bits/byteswap-16.h \
  /usr/include/c++/4.8/bits/ostream_insert.h \
  /usr/include/c++/4.8/bits/cxxabi_forced.h \
+ /usr/include/c++/4.8/bits/stl_function.h \
+ /usr/include/c++/4.8/backward/binders.h \
  /usr/include/c++/4.8/bits/range_access.h \
  /usr/include/c++/4.8/bits/basic_string.h \
  /usr/include/c++/4.8/ext/atomicity.h \
@@ -92,19 +89,24 @@ test/line_search_test.o: test/line_search_test.cpp \
  /usr/include/linux/errno.h /usr/include/x86_64-linux-gnu/asm/errno.h \
  /usr/include/asm-generic/errno.h /usr/include/asm-generic/errno-base.h \
  /usr/include/c++/4.8/bits/functional_hash.h \
+ /usr/include/c++/4.8/bits/hash_bytes.h \
  /usr/include/c++/4.8/bits/basic_string.tcc \
  /usr/include/c++/4.8/bits/uses_allocator.h \
- test/../utilities/optimization/../linear_algebra/dense_matrix.hpp \
- test/../utilities/optimization/../linear_algebra/../general/dvec_def.hpp \
- /usr/include/c++/4.8/vector /usr/include/c++/4.8/bits/stl_construct.h \
- /usr/include/c++/4.8/ext/alloc_traits.h \
  /usr/include/c++/4.8/bits/alloc_traits.h \
  /usr/include/c++/4.8/bits/ptr_traits.h \
+ /usr/include/c++/4.8/bits/hashtable.h \
+ /usr/include/c++/4.8/bits/hashtable_policy.h \
+ /usr/include/c++/4.8/bits/unordered_map.h \
+ hamiltonians/../utilities/general/dvec_def.hpp \
+ /usr/include/c++/4.8/vector /usr/include/c++/4.8/bits/stl_construct.h \
+ /usr/include/c++/4.8/ext/alloc_traits.h \
  /usr/include/c++/4.8/bits/stl_uninitialized.h \
  /usr/include/c++/4.8/bits/stl_vector.h \
  /usr/include/c++/4.8/bits/stl_bvector.h \
  /usr/include/c++/4.8/bits/vector.tcc \
- test/../utilities/optimization/../linear_algebra/dense_vector.hpp \
+ hamiltonians/../utilities/linear_algebra/dense_matrix.hpp \
+ hamiltonians/../utilities/linear_algebra/../general/dvec_def.hpp \
+ hamiltonians/../utilities/linear_algebra/dense_vector.hpp \
  /usr/include/c++/4.8/random /usr/include/c++/4.8/cmath \
  /usr/include/math.h /usr/include/x86_64-linux-gnu/bits/huge_val.h \
  /usr/include/x86_64-linux-gnu/bits/huge_valf.h \
@@ -127,7 +129,7 @@ test/line_search_test.o: test/line_search_test.cpp \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/adxintrin.h \
  /usr/include/c++/4.8/bits/random.tcc /usr/include/c++/4.8/numeric \
  /usr/include/c++/4.8/bits/stl_numeric.h \
- test/../utilities/optimization/../linear_algebra/blas.hpp \
+ hamiltonians/../utilities/linear_algebra/blas.hpp \
  /usr/include/c++/4.8/iostream /usr/include/c++/4.8/ostream \
  /usr/include/c++/4.8/ios /usr/include/c++/4.8/bits/ios_base.h \
  /usr/include/c++/4.8/bits/locale_classes.h \
@@ -143,14 +145,31 @@ test/line_search_test.o: test/line_search_test.cpp \
  /usr/include/c++/4.8/bits/basic_ios.tcc \
  /usr/include/c++/4.8/bits/ostream.tcc /usr/include/c++/4.8/istream \
  /usr/include/c++/4.8/bits/istream.tcc \
- test/../utilities/optimization/../linear_algebra/dense_vector.hpp \
- test/../utilities/optimization/../general/dvec_def.hpp
+ hamiltonians/../utilities/algorithms/quick_sort.hpp \
+ hamiltonians/../utilities/algorithms/../general/dcmplx_type_def.hpp \
+ /usr/include/c++/4.8/complex /usr/include/c++/4.8/sstream \
+ /usr/include/c++/4.8/bits/sstream.tcc \
+ hamiltonians/../utilities/wrappers/io_wrapper.hpp \
+ /usr/include/c++/4.8/fstream /usr/include/c++/4.8/bits/codecvt.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/basic_file.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++io.h \
+ /usr/include/c++/4.8/bits/fstream.tcc /usr/include/c++/4.8/iomanip \
+ /usr/include/c++/4.8/locale \
+ /usr/include/c++/4.8/bits/locale_facets_nonio.h \
+ /usr/include/c++/4.8/ctime \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/time_members.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/messages_members.h \
+ /usr/include/libintl.h /usr/include/c++/4.8/bits/locale_facets_nonio.tcc \
+ hamiltonians/../utilities/wrappers/../general/template_tools.hpp \
+ hamiltonians/../utilities/wrappers/../general/dcmplx_type_def.hpp
 
 /usr/include/stdc-predef.h:
 
-test/../utilities/optimization/line_search.hpp:
+hamiltonians/site_labels.hpp:
 
-/usr/include/c++/4.8/functional:
+/usr/include/c++/4.8/unordered_map:
+
+/usr/include/c++/4.8/utility:
 
 /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++config.h:
 
@@ -168,30 +187,6 @@ test/../utilities/optimization/line_search.hpp:
 
 /usr/include/x86_64-linux-gnu/c++/4.8/bits/cpu_defines.h:
 
-/usr/include/c++/4.8/bits/stl_function.h:
-
-/usr/include/c++/4.8/backward/binders.h:
-
-/usr/include/c++/4.8/typeinfo:
-
-/usr/include/c++/4.8/exception:
-
-/usr/include/c++/4.8/bits/atomic_lockfree_defines.h:
-
-/usr/include/c++/4.8/bits/exception_ptr.h:
-
-/usr/include/c++/4.8/bits/exception_defines.h:
-
-/usr/include/c++/4.8/bits/nested_exception.h:
-
-/usr/include/c++/4.8/bits/hash_bytes.h:
-
-/usr/include/c++/4.8/new:
-
-/usr/include/c++/4.8/tuple:
-
-/usr/include/c++/4.8/utility:
-
 /usr/include/c++/4.8/bits/stl_relops.h:
 
 /usr/include/c++/4.8/bits/stl_pair.h:
@@ -204,9 +199,21 @@ test/../utilities/optimization/line_search.hpp:
 
 /usr/include/c++/4.8/initializer_list:
 
+/usr/include/c++/4.8/tuple:
+
 /usr/include/c++/4.8/array:
 
 /usr/include/c++/4.8/stdexcept:
+
+/usr/include/c++/4.8/exception:
+
+/usr/include/c++/4.8/bits/atomic_lockfree_defines.h:
+
+/usr/include/c++/4.8/bits/exception_ptr.h:
+
+/usr/include/c++/4.8/bits/exception_defines.h:
+
+/usr/include/c++/4.8/bits/nested_exception.h:
 
 /usr/include/c++/4.8/string:
 
@@ -264,6 +271,8 @@ test/../utilities/optimization/line_search.hpp:
 
 /usr/include/c++/4.8/ext/new_allocator.h:
 
+/usr/include/c++/4.8/new:
+
 /usr/include/c++/4.8/bits/localefwd.h:
 
 /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++locale.h:
@@ -295,6 +304,10 @@ test/../utilities/optimization/line_search.hpp:
 /usr/include/c++/4.8/bits/ostream_insert.h:
 
 /usr/include/c++/4.8/bits/cxxabi_forced.h:
+
+/usr/include/c++/4.8/bits/stl_function.h:
+
+/usr/include/c++/4.8/backward/binders.h:
 
 /usr/include/c++/4.8/bits/range_access.h:
 
@@ -384,23 +397,29 @@ test/../utilities/optimization/line_search.hpp:
 
 /usr/include/c++/4.8/bits/functional_hash.h:
 
+/usr/include/c++/4.8/bits/hash_bytes.h:
+
 /usr/include/c++/4.8/bits/basic_string.tcc:
 
 /usr/include/c++/4.8/bits/uses_allocator.h:
 
-test/../utilities/optimization/../linear_algebra/dense_matrix.hpp:
+/usr/include/c++/4.8/bits/alloc_traits.h:
 
-test/../utilities/optimization/../linear_algebra/../general/dvec_def.hpp:
+/usr/include/c++/4.8/bits/ptr_traits.h:
+
+/usr/include/c++/4.8/bits/hashtable.h:
+
+/usr/include/c++/4.8/bits/hashtable_policy.h:
+
+/usr/include/c++/4.8/bits/unordered_map.h:
+
+hamiltonians/../utilities/general/dvec_def.hpp:
 
 /usr/include/c++/4.8/vector:
 
 /usr/include/c++/4.8/bits/stl_construct.h:
 
 /usr/include/c++/4.8/ext/alloc_traits.h:
-
-/usr/include/c++/4.8/bits/alloc_traits.h:
-
-/usr/include/c++/4.8/bits/ptr_traits.h:
 
 /usr/include/c++/4.8/bits/stl_uninitialized.h:
 
@@ -410,7 +429,11 @@ test/../utilities/optimization/../linear_algebra/../general/dvec_def.hpp:
 
 /usr/include/c++/4.8/bits/vector.tcc:
 
-test/../utilities/optimization/../linear_algebra/dense_vector.hpp:
+hamiltonians/../utilities/linear_algebra/dense_matrix.hpp:
+
+hamiltonians/../utilities/linear_algebra/../general/dvec_def.hpp:
+
+hamiltonians/../utilities/linear_algebra/dense_vector.hpp:
 
 /usr/include/c++/4.8/random:
 
@@ -464,7 +487,7 @@ test/../utilities/optimization/../linear_algebra/dense_vector.hpp:
 
 /usr/include/c++/4.8/bits/stl_numeric.h:
 
-test/../utilities/optimization/../linear_algebra/blas.hpp:
+hamiltonians/../utilities/linear_algebra/blas.hpp:
 
 /usr/include/c++/4.8/iostream:
 
@@ -506,6 +529,44 @@ test/../utilities/optimization/../linear_algebra/blas.hpp:
 
 /usr/include/c++/4.8/bits/istream.tcc:
 
-test/../utilities/optimization/../linear_algebra/dense_vector.hpp:
+hamiltonians/../utilities/algorithms/quick_sort.hpp:
 
-test/../utilities/optimization/../general/dvec_def.hpp:
+hamiltonians/../utilities/algorithms/../general/dcmplx_type_def.hpp:
+
+/usr/include/c++/4.8/complex:
+
+/usr/include/c++/4.8/sstream:
+
+/usr/include/c++/4.8/bits/sstream.tcc:
+
+hamiltonians/../utilities/wrappers/io_wrapper.hpp:
+
+/usr/include/c++/4.8/fstream:
+
+/usr/include/c++/4.8/bits/codecvt.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/basic_file.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/c++io.h:
+
+/usr/include/c++/4.8/bits/fstream.tcc:
+
+/usr/include/c++/4.8/iomanip:
+
+/usr/include/c++/4.8/locale:
+
+/usr/include/c++/4.8/bits/locale_facets_nonio.h:
+
+/usr/include/c++/4.8/ctime:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/time_members.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/messages_members.h:
+
+/usr/include/libintl.h:
+
+/usr/include/c++/4.8/bits/locale_facets_nonio.tcc:
+
+hamiltonians/../utilities/wrappers/../general/template_tools.hpp:
+
+hamiltonians/../utilities/wrappers/../general/dcmplx_type_def.hpp:
