--- a/src/utilities/optimization/.deps/line_search.Po
+++ b/src/utilities/optimization/.deps/line_search.Po
@@ -127,8 +127,6 @@ utilities/optimization/line_search.o: \
  /usr/include/c++/4.8/bits/random.tcc /usr/include/c++/4.8/numeric \
  /usr/include/c++/4.8/bits/stl_numeric.h \
  utilities/optimization/../linear_algebra/blas.hpp \
- utilities/optimization/../linear_algebra/dense_vector.hpp \
- utilities/optimization/../general/dvec_def.hpp \
  /usr/include/c++/4.8/iostream /usr/include/c++/4.8/ostream \
  /usr/include/c++/4.8/ios /usr/include/c++/4.8/bits/ios_base.h \
  /usr/include/c++/4.8/bits/locale_classes.h \
@@ -143,7 +141,9 @@ utilities/optimization/line_search.o: \
  /usr/include/c++/4.8/bits/locale_facets.tcc \
  /usr/include/c++/4.8/bits/basic_ios.tcc \
  /usr/include/c++/4.8/bits/ostream.tcc /usr/include/c++/4.8/istream \
- /usr/include/c++/4.8/bits/istream.tcc
+ /usr/include/c++/4.8/bits/istream.tcc \
+ utilities/optimization/../linear_algebra/dense_vector.hpp \
+ utilities/optimization/../general/dvec_def.hpp
 
 /usr/include/stdc-predef.h:
 
@@ -465,10 +465,6 @@ utilities/optimization/../linear_algebra/dense_vector.hpp:
 
 utilities/optimization/../linear_algebra/blas.hpp:
 
-utilities/optimization/../linear_algebra/dense_vector.hpp:
-
-utilities/optimization/../general/dvec_def.hpp:
-
 /usr/include/c++/4.8/iostream:
 
 /usr/include/c++/4.8/ostream:
@@ -508,3 +504,7 @@ utilities/optimization/../general/dvec_def.hpp:
 /usr/include/c++/4.8/istream:
 
 /usr/include/c++/4.8/bits/istream.tcc:
+
+utilities/optimization/../linear_algebra/dense_vector.hpp:
+
+utilities/optimization/../general/dvec_def.hpp:
